--- a/public/css/app.css
+++ b/public/css/app.css
@@ -50,6 +50,14 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.fadein, .fadeout {
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+}
+.fadein {
+    opacity: 1;
+}
+
 article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
   display: block;
 }
@@ -10002,3 +10010,4 @@ h3 {
     border-color: #dee2e6;
   }
 }
+
